RESOLVED FIXED 27026
Guard signal.h dependency with HAVE(SIGNAL_H)
https://bugs.webkit.org/show_bug.cgi?id=27026
Summary Guard signal.h dependency with HAVE(SIGNAL_H)
Laszlo Gombos
Reported 2009-07-07 05:39:37 PDT
Symbian OpenC (and some other embedded platforms) does not currently provide signal.h. It would be useful to introduce a guard for signal.h, just like the guards for other POSIX headers (HAVE(SYS_PARAM), HAVE(SYS_TIME), etc).
Attachments
Proposed fix. (2.17 KB, patch)
2009-07-07 05:43 PDT, Laszlo Gombos
darin: review+
Laszlo Gombos
Comment 1 2009-07-07 05:43:48 PDT
Created attachment 32374 [details] Proposed fix.
David Kilzer (:ddkilzer)
Comment 2 2009-07-09 12:56:37 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M JavaScriptCore/ChangeLog M JavaScriptCore/jsc.cpp M JavaScriptCore/wtf/Platform.h Committed r45667 M JavaScriptCore/jsc.cpp M JavaScriptCore/wtf/Platform.h M JavaScriptCore/ChangeLog r45667 = 6a4077205c8f8f8e93bca4c41c4b0f91ddb82c57 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/45667
Note You need to log in before you can comment on or make changes to this bug.