2009-07-09  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        Guard singal.h dependency with HAVE(SIGNAL_H) to enable building jsc
        on SYMBIAN.

        https://bugs.webkit.org/show_bug.cgi?id=27026

        Based on Norbert Leser's work.

        * jsc.cpp:
        (printUsageStatement):
        (parseArguments):
        * wtf/Platform.h:

Canonical link: https://commits.webkit.org/37322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45667 268f45cc-cd09-0410-ab3c-d52691b4dbfc